work on 1.20.4 backport