@@ -51,22 +51,12 @@ public class WaterSeparatorMenu extends BaseContainer {
 
     public void syncWidgets(ServerPlayer player) {
         if (!player.level().isClientSide()) {
-            FluidTank resultTank1 = blockEntity.getResultTanks().getFirst();
+            FluidTank resultTank1 = blockEntity.getResultTanks().get(0);
             FluidTank resultTank2 = blockEntity.getResultTanks().get(1);
 
-
-            NetworkManager.sendToPlayer(player, new SyncWidgetsTanksPacket(new long[] {resultTank1.getAmount(), resultTank2.getAmount()},
-                    new ResourceLocation[] {resultTank1.getStack().getFluid().arch$registryName(), resultTank2.getStack().getFluid().arch$registryName()}
-            ));
-
-            NetworkManager.sendToPlayer(player, new SyncWidgetsTanksPacket(
-                    new long[] {blockEntity.ingredientTank.getAmount()},
-                    new ResourceLocation[] {blockEntity.ingredientTank.getStack().getFluid().arch$registryName()}
-            ));
-
-            NetworkManager.sendToPlayer(player, new SyncWidgetsTanksPacket(
-                    new long[] {blockEntity.getWrappedEnergyContainer().getStoredEnergy(), 0, 0}
-            ));
+            new SyncWidgetsTanksPacket(new long[] {resultTank1.getAmount(), resultTank2.getAmount()}, new ResourceLocation[] {resultTank1.getStack().getFluid().arch$registryName(), resultTank2.getStack().getFluid().arch$registryName()}).sendTo(player);
+            new SyncWidgetsTanksPacket( new long[] {blockEntity.ingredientTank.getAmount()}, new ResourceLocation[] {blockEntity.ingredientTank.getStack().getFluid().arch$registryName()}).sendTo(player);
+            new SyncWidgetsTanksPacket(new long[] {blockEntity.getWrappedEnergyContainer().getStoredEnergy(), 0, 0}).sendTo(player);
         }
     }
 
